Updated SEO, ads, and player

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="google-adsense-account" content="ca-pub-9480366884412883" />
+    <title>Gameszone Club – Play Free HTML5 Games</title>
+    <meta
+      name="description"
+      content="Play addictive free games instantly. No downloads. A Gamezop-style experience."
+    />
+    <meta
+      name="keywords"
+      content="HTML5 games, Gamezop, instant games, online games, browser games"
+    />
+    <meta name="author" content="eswar" />
+
+    <!-- Open Graph (for social media sharing) -->
+    <meta
+      property="og:title"
+      content="Gameszone Club Clone – Free Online Games"
+    />
+    <meta
+      property="og:description"
+      content="Enjoy addictive free games like Gamezop. Play instantly without downloading!"
+    />
+
+    <meta property="og:url" content="https://gameszone.club" />
+    <meta name="twitter:card" content="summary_large_image" />
+
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
