--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <meta name="google-adsense-account" content="ca-pub-9480366884412883" />
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9480366884412883"
+      crossorigin="anonymous"
+    ></script>
     <title>Gameszone Club – Play Free HTML5 Games</title>
     <meta
       name="description"
